# cw_7

./: .flake8  README.md  pyproject.toml
config/: settings.py  urls.py
habits/: admin.py  models.py  paginations.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_habit_time.py  0003_alter_habit_habit_time.py  0004_alter_habit_habit_time_alter_habit_lead_time.py  0005_alter_habit_habit_time.py  0006_alter_habit_habit_time.py  0007_alter_habit_habit_time.py  0008_alter_habit_habit_time.py  0009_alter_habit_habit_time.py  0010_alter_habit_owner.py  0011_alter_habit_habit_time.py  0012_alter_habit_place.py  0013_habit_habit_start.py  0014_alter_habit_habit_start.py  0015_habit_is_reminder_send.py  0016_alter_habit_habit_start.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
